# PPAP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/services/: llm_redactor.py  pattern_redactor.py  privacy.py  redactor_base.py
app/utils/: pii_recognizers.yaml
docker/: Dockerfile  docker-compose.debug.yml  docker-compose.yml
scripts/: run_fastapi.sh  test_api.sh
tests/: test_privacy.py
